--- a/index.html
+++ b/index.html
@@ -156,11 +156,11 @@
                 </a>
                 <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 bg-light" id="navbar-vertical" style="width: calc(100% - 30px); z-index: 999;">
                     <div class="navbar-nav w-100">
-                        <a href="" class="nav-item nav-link">1</a>
-                        <a href="" class="nav-item nav-link">2</a>
-                        <a href="" class="nav-item nav-link">3</a>
-                        <a href="" class="nav-item nav-link">4</a>
-                    </div>
+                    <a href="#" class="nav-item nav-link category-link" data-category="gaming-gear-products">Gaming Gear</a>
+                    <a href="#" class="nav-item nav-link category-link" data-category="games-products">Games</a>
+                    <a href="#" class="nav-item nav-link category-link" data-category="gift-card-products">Gift Card</a>
+                    <a href="#" class="nav-item nav-link category-link" data-category="console-products">Console</a>
+                  </div>
                 </nav>
             </div>
             <div class="col-lg-9">
@@ -557,9 +557,7 @@ function signIn(event) {
 
 <script>
     window.onload = function(){
-
-      loadCatagory('http://localhost:4000/api/catagory');
-
+        
         fetch('backend/data/Console.json')
         .then(response => response.json())
         .then(data => displayConsoles(data))
@@ -571,28 +569,6 @@ function signIn(event) {
         .then(data => displayGiftcard(data))
         .catch(error => console.error('Error loading console data:', error));
     };
-
-    //หมวดหมู่
-     function loadCatagory(url){
-      fetch(url)
-      .then(response => response.json())
-      .then(data => catagoryList(data));
-    }
-
-function catagoryList(data){
-  const nav = document.querySelector("#navbar-vertical .navbar-nav");
-  nav.innerHTML = ""; // ล้างรายการเก่า
-
-  data.categories.forEach(category => {
-    const link = document.createElement("a");
-    link.className = "nav-item nav-link";
-    link.href = "#"; // คุณสามารถเปลี่ยนเป็น URL ของแต่ละหมวดหมู่ได้
-    link.textContent = category;
-
-    nav.appendChild(link);
-  });
-}
-
     //ดึงข้อมูลมาจาก console.json
         function displayConsoles(data) {
             const container = document.getElementById('console-list');
