--- a/checkout.html
+++ b/checkout.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-    <!-- Sign In Modal -->
+   <!-- Sign In Modal -->
     <div class="modal fade" id="signInModal" tabindex="-1" role="dialog" aria-labelledby="signInModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -48,6 +48,64 @@
             <input type="password" class="form-control" id="signinPassword" placeholder="Password">
           </div>
           <button type="submit" class="btn btn-primary btn-block">Sign In</button>
+          <div class="text-center mt-2">
+            <a href="#" onclick="openForgotPasswordModal()">ลืมรหัสผ่าน?</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!-- Forgot Password Modal -->
+<div class="modal fade" id="forgotPasswordModal" tabindex="-1" role="dialog" aria-labelledby="forgotPasswordModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">ลืมรหัสผ่าน</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form onsubmit="forgotPassword(event)">
+          <div class="form-group">
+            <label for="forgotEmail">อีเมล</label>
+            <input type="email" class="form-control" id="forgotEmail" placeholder="กรอกอีเมลของคุณ">
+          </div>
+          <div class="form-group">
+            <label for="newPassword">รหัสผ่านใหม่</label>
+            <input type="password" class="form-control" id="newPassword" placeholder="ตั้งรหัสผ่านใหม่">
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">ตั้งรหัสใหม่</button>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-----Changed Name----->
+<div class="modal fade" id="changeUsernameModal" tabindex="-1" role="dialog" aria-labelledby="changeUsernameModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">เปลี่ยนชื่อผู้ใช้</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span>&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form onsubmit="changeUsername(event)">
+          <div class="form-group">
+            <label for="newUsername">ชื่อผู้ใช้ใหม่</label>
+            <input type="text" class="form-control" id="newUsername" placeholder="กรอกชื่อผู้ใช้ใหม่" required>
+          </div>
+          <div class="form-group">
+            <label for="changeEmail">ยืนยันอีเมล</label>
+            <input type="email" class="form-control" id="changeEmail" placeholder="กรอกอีเมลที่ใช้ลงทะเบียน" required>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block">ยืนยัน</button>
         </form>
       </div>
     </div>
@@ -84,6 +142,7 @@
     </div>
   </div>
 </div>
+
 
     <!-- Topbar Start -->
     <div class="container-fluid">
@@ -545,9 +604,42 @@ window.onclick = function(event) {
 </script>
 <!--สคริปต์หน้าล็อคอินกับสร้างบัญชี-->
 <script>
-   function signUp(event) {
-  event.preventDefault();       
+// ลืมรหัสผ่าน
+function openForgotPasswordModal() {
+  $('#signInModal').modal('hide');
+  $('#forgotPasswordModal').modal('show');
+}
 
+function forgotPassword(event) {
+  event.preventDefault();
+  const email = document.getElementById('forgotEmail').value;
+  const newPassword = document.getElementById('newPassword').value;
+
+  if (!email || !newPassword) {
+    alert("กรุณากรอกอีเมลและรหัสผ่านใหม่");
+    return;
+  }
+
+  fetch('http://localhost:8000/api/account/forgot-password', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email, newPassword })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.success) {
+      alert("ตั้งรหัสผ่านใหม่เรียบร้อยแล้ว");
+      $('#forgotPasswordModal').modal('hide');
+      $('#signInModal').modal('show');
+    } else {
+      alert(data.message);
+    }
+  });
+}
+
+// สมัครสมาชิก
+function signUp(event) {
+  event.preventDefault();       
   const username = document.getElementById('signupUsername').value;
   const email = document.getElementById('signupEmail').value;
   const password = document.getElementById('signupPassword').value;
@@ -560,9 +652,9 @@ window.onclick = function(event) {
   .then(res => res.json())
   .then(data => {
     if (data.success) {
-        localStorage.setItem('username', data.username);
-        updateAccountUI(); // <- เรียกตรงนี้
-        $('#signInModal').modal('hide');
+      localStorage.setItem('username', data.username);
+      updateAccountUI();
+      $('#signUpModal').modal('hide');
       alert("สมัครสมาชิกสำเร็จ");
     } else {
       alert("สมัครไม่สำเร็จ: " + data.message);
@@ -570,10 +662,9 @@ window.onclick = function(event) {
   });
 }
 
-
+// ล็อกอิน
 function signIn(event) {
   event.preventDefault(); 
-
   const email = document.getElementById('signinEmail').value; 
   const password = document.getElementById('signinPassword').value;
 
@@ -585,19 +676,87 @@ function signIn(event) {
   .then(res => res.json())
   .then(data => {
     if (data.success) {
-        localStorage.setItem('username', data.username);
-        updateAccountUI(); // <- เรียกตรงนี้
-        $('#signInModal').modal('hide');
+      localStorage.setItem('username', data.username);
+      updateAccountUI();
+      $('#signInModal').modal('hide');
       alert("ล็อกอินสำเร็จ");
     } else {
-         alert("อีเมล์หรือรหัสผิด")
-      document.getElementById('loginError').innerText = data.message || "Login failed";
-     
+      alert("อีเมลหรือรหัสผ่านไม่ถูกต้อง");
+      const err = document.getElementById('loginError');
+      if (err) err.innerText = data.message || "Login failed";
     }
   });
 }
+
+// เปลี่ยน UI เมื่อผู้ใช้ล็อกอินสำเร็จ
+function updateAccountUI() {
+  const username = localStorage.getItem('username');
+  const dropdown = document.getElementById('accountDropdown');
+  if (!dropdown) return;
+  if (username) {
+    dropdown.innerHTML = `
+      <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">${username}</button>
+      <div class="dropdown-menu dropdown-menu-right">
+        <button class="dropdown-item" type="button" onclick="openChangeUsernameModal()">เปลี่ยนชื่อผู้ใช้</button>
+        <button class="dropdown-item" type="button" onclick="logout()">Logout</button>
+      </div>
+    `;
+  } else {
+    dropdown.innerHTML = `
+      <button type="button" class="btn btn-sm btn-light dropdown-toggle" data-toggle="dropdown">My Account</button>
+      <div class="dropdown-menu dropdown-menu-right">
+        <button class="dropdown-item" type="button" data-toggle="modal" data-target="#signInModal">Sign in</button>
+        <button class="dropdown-item" type="button" data-toggle="modal" data-target="#signUpModal">Sign up</button>
+      </div>
+    `;
+  }
+}
+
+function changeUsername(event) {
+  event.preventDefault();
+
+  const newUsername = document.getElementById('newUsername').value.trim();
+  const email = document.getElementById('changeEmail').value.trim();
+
+  if (!newUsername || !email) {
+    alert("กรุณากรอกข้อมูลให้ครบ");
+    return;
+  }
+
+  fetch('http://localhost:8000/api/account/change-username', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ email, newUsername })
+  })
+  .then(res => res.json())
+  .then(data => {
+    if (data.success) {
+      alert("เปลี่ยนชื่อผู้ใช้สำเร็จเป็น: " + newUsername);
+      localStorage.setItem('username', newUsername);
+      updateAccountUI();
+      $('#changeUsernameModal').modal('hide');
+    } else {
+      alert(data.message || "เปลี่ยนชื่อผู้ใช้ไม่สำเร็จ");
+    }
+  })
+  .catch(err => {
+    alert("เกิดข้อผิดพลาด: " + err.message);
+  });
+}
+function openChangeUsernameModal() {
+  $('#changeUsernameModal').modal('show');
+}
+
+// Logout
+function logout() {
+  localStorage.removeItem('username');
+  updateAccountUI();
+}
+
+// เรียกอัปเดต UI ทันทีเมื่อโหลดหน้า
+document.addEventListener('DOMContentLoaded', function () {
+  updateAccountUI();
+});
 </script>
-<script src="Register.js"></script>
-</body>
 
 </html>
