--- a/addProducttest.html
+++ b/addProducttest.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>จัดการสินค้า</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <style>
     img { width: 100px; }
     .product { border: 1px solid #ccc; margin: 10px; padding: 10px; }
   </style>
 </head>
 <body class="container py-4">
-  <h2>เพิ่มสินค้า(เอาไว้ดึงรูปมาทำข้อมูลสินค้า)</h2>
+  <h2>เพิ่มสินค้า</h2>
   <form id="add-form" class="mb-5">
-    <input name="name" class="form-control mb-2" placeholder="ชื่อสินค้า" required>
+    <input name="name" class="form-control mb-2" placeholder="ชื่อสินค้า" required />
     <textarea name="description" class="form-control mb-2" placeholder="คำอธิบาย" required style="height: 100px;"></textarea>
-    <select name="category" class="form-control mb-2">
-      <option value="">--หมวดหมู่สินค้า--(เลือกตามชื่อโฟลเดอร์)</option>
+    <select name="category" class="form-control mb-2" required>
+      <option value="">--หมวดหมู่สินค้า--</option>
       <option value="Console">Console</option>
       <option value="Games">Games</option>
-      <option value="Gear">Gear</option>
-      <option value="GiftCard">GiftCard</option>
+      <option value="Gaming-Gear">Gaming Gear</option>
+      <option value="Gift-Card">GiftCard</option>
     </select>
-    <input name="image" class="form-control mb-2" placeholder="ชื่อไฟล์รูป เช่น giftcard1.png" required>
+    <input name="image" class="form-control mb-2" placeholder="พาธรูป เช่น /img/use/product/GiftCard/giftcard1.png" required />
     <textarea name="prices" class="form-control mb-2" placeholder="ชื่อตัวเลือก:ราคาขาย เช่น Steam Wallet 300:290,Steam Wallet 500:470" required></textarea>
     <button type="submit" class="btn btn-primary">เพิ่ม</button>
   </form>
 
   <h2>สินค้าทั้งหมด</h2>
+  <select id="category-select" class="form-select mb-4">
+    <option value="Console">Console</option>
+    <option value="Games">Games</option>
+    <option value="Gaming-Gear">Gaming Gear</option>
+    <option value="Gift-Card">GiftCard</option>
+  </select>
   <div id="product-list" class="row"></div>
 
   <!-- Modal แก้ไข -->
@@ -39,11 +45,11 @@
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="ปิด"></button>
           </div>
           <div class="modal-body">
-            <input name="name" class="form-control mb-2" placeholder="ชื่อสินค้า" required>
+            <input name="name" class="form-control mb-2" placeholder="ชื่อสินค้า" required />
             <textarea name="description" class="form-control mb-2" rows="3" placeholder="คำอธิบายสินค้า" required></textarea>
-            <input name="category" class="form-control mb-2" placeholder="หมวดหมู่ เช่น GiftCard" required>
-            <input name="image" class="form-control mb-2" placeholder="ชื่อไฟล์รูป เช่น abc.jpg" required>
-            <textarea name="prices" class="form-control" placeholder="มูลค่า:ราคาขาย เช่น Steam Wallet 300:290,Steam Wallet 500:470" required></textarea>
+            <input name="category" class="form-control mb-2" placeholder="หมวดหมู่ เช่น GiftCard" required />
+            <input name="image" class="form-control mb-2" placeholder="พาธรูป เช่น /img/use/product/GiftCard/giftcard1.png" required />
+            <textarea name="prices" class="form-control" placeholder="ชื่อตัวเลือก:ราคาขาย เช่น Steam Wallet 300:290,Steam Wallet 500:470" required></textarea>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">ยกเลิก</button>
@@ -56,35 +62,47 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script>
-    const apiUrl = 'http://localhost:5000/api/products';
+    const baseApiUrl = 'http://localhost:5000/api/products';
     const list = document.getElementById('product-list');
+    const categorySelect = document.getElementById('category-select');
+    let currentCategory = categorySelect.value;
     let currentProduct = null;
 
     async function loadProducts() {
-      const res = await fetch(apiUrl);
-      const products = await res.json();
-      list.innerHTML = '';
-      products.forEach(p => {
-        list.innerHTML += `
-          <div class="product col-md-4">
-            <div class="card mb-3">
-              <img src="/img/use/product/${p.category}/${p.image}" class="card-img-top" alt="${p.name}">
-              <div class="card-body">
-                <h5 class="card-title">${p.name}</h5>
-                <p class="card-text">${p.description}</p>
-                <p class="card-text">
-                  ตัวเลือก:
-                  ${p.prices.map(pr => `<br>${pr.value} (ราคา ${pr.salePrice}฿)`).join('')}
-                </p>
-                <button onclick='editProduct(${JSON.stringify(p)})' class="btn btn-sm btn-warning">แก้ไข</button>
-                <button onclick='deleteProduct(${p.id})' class="btn btn-sm btn-danger">ลบ</button>
+      try {
+        const res = await fetch(`${baseApiUrl}/${currentCategory}`);
+        if (!res.ok) throw new Error('โหลดข้อมูลสินค้าไม่สำเร็จ');
+        const products = await res.json();
+
+        list.innerHTML = '';
+        products.forEach(p => {
+          list.innerHTML += `
+            <div class="product col-md-4">
+              <div class="card mb-3">
+                <img src="${p.image}" class="card-img-top" alt="${p.name}" />
+                <div class="card-body">
+                  <h5 class="card-title">${p.name}</h5>
+                  <p class="card-text">${p.description}</p>
+                  <p class="card-text">
+                    ตัวเลือก:
+                    ${Array.isArray(p.prices) ? p.prices.map(pr => `<br>${pr.value} (ราคา ${pr.salePrice}฿)`).join('') : ''}
+                  </p>
+                  <button onclick='editProduct(${JSON.stringify(p)})' class="btn btn-sm btn-warning">แก้ไข</button>
+                  <button onclick='deleteProduct(${p.id})' class="btn btn-sm btn-danger">ลบ</button>
+                </div>
               </div>
-            </div>
-          </div>`;
-      });
+            </div>`;
+        });
+      } catch (error) {
+        alert(error.message);
+      }
     }
 
-    //add product
+    categorySelect.addEventListener('change', () => {
+      currentCategory = categorySelect.value;
+      loadProducts();
+    });
+
     document.getElementById('add-form').onsubmit = async e => {
       e.preventDefault();
       const f = e.target;
@@ -100,15 +118,14 @@
       });
 
       const data = {
-        name: f.name.value,
-        description: f.description.value,
-        category: f.category.value,
-        image: f.image.value,
+        name: f.name.value.trim(),
+        description: f.description.value.trim(),
+        category: f.category.value.trim(),
+        image: f.image.value.trim(),
         prices: pricesArray
       };
-      console.log(data);
 
-      await fetch(apiUrl, {
+      await fetch(`${baseApiUrl}/${data.category}`, {
         method: 'POST',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(data)
@@ -120,7 +137,7 @@
 
     async function deleteProduct(id) {
       if (confirm("คุณต้องการลบสินค้านี้ใช่หรือไม่?")) {
-        await fetch(`${apiUrl}/${id}`, { method: 'DELETE' });
+        await fetch(`${baseApiUrl}/${currentCategory}/${id}`, { method: 'DELETE' });
         loadProducts();
       }
     }
@@ -151,14 +168,14 @@
 
       const updated = {
         ...currentProduct,
-        name: form.name.value,
-        description: form.description.value,
-        category: form.category.value,
-        image: form.image.value,
+        name: form.name.value.trim(),
+        description: form.description.value.trim(),
+        category: form.category.value.trim(),
+        image: form.image.value.trim(),
         prices: updatedPrices
       };
 
-      await fetch(`${apiUrl}/${currentProduct.id}`, {
+      await fetch(`${baseApiUrl}/${currentProduct.category}/${currentProduct.id}`, {
         method: 'PUT',
         headers: { 'Content-Type': 'application/json' },
         body: JSON.stringify(updated)
