--- a/shop.html
+++ b/shop.html
@@ -489,29 +489,46 @@ function loadProducts(categoryType, targetElementId) {
 }
 
 function createProductCard(product) {
+  const minPrice = product.prices && product.prices.length > 0
+    ? Math.min(...product.prices.map(p => p.salePrice))
+    : product.price || ''; 
+
   return `
     <div class="col-lg-3 col-md-4 col-sm-6 pb-3">
-      <div class="product-item bg-light mb-4">
+      <div class="product-item bg-light mb-4 h-100 d-flex flex-column justify-content-between">
         <div class="product-img position-relative overflow-hidden" style="height: 250px;">
           <img class="img-fluid w-100" style="height: 100%; object-fit: cover;" src="${product.image}" alt="${product.name}">
           <div class="product-action">
             <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-shopping-cart"></i></a>
             <a class="btn btn-outline-dark btn-square" href="#"><i class="far fa-heart"></i></a>
             <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-sync-alt"></i></a>
-            <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-search"></i></a>
+            <a class="btn btn-outline-dark btn-square" href="detail.html"
+              onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">
+              <i class="fa fa-search"></i>
+            </a>
           </div>
         </div>
-        <div class="text-center py-4">
-          <a class="h6 text-decoration-none text-truncate" href="#">${product.name}</a>
-          <p class="small text-muted mb-2">${product.description || ''}</p>
+        <div class="text-center py-4 px-2 flex-grow-1 d-flex flex-column justify-content-between">
+          <div>
+            <a class="h6 text-decoration-none text-truncate d-block mb-2" href="detail.html"
+            onclick="event.preventDefault(); 
+                       localStorage.setItem('productid', '${product.id}'); 
+                       localStorage.setItem('productcategory', '${product.category}');
+                       window.location.href='detail.html';">${product.name}</a>
+            <p class="small text-muted mb-2">${product.description}</p>
+          </div>
           <div class="d-flex align-items-center justify-content-center mt-2">
-            <h5>${product.price}</h5>
+            <h5>${minPrice ? minPrice + ' ฿' : ''}</h5>
           </div>
         </div>
       </div>
     </div>
   `;
 }
+
 
 
 </script>
