--- a/shop.html
+++ b/shop.html
@@ -156,6 +156,7 @@
                     <a class="text-body mr-3" href="">Contact</a>
                     <a class="text-body mr-3" href="">Help</a>
                     <a class="text-body mr-3" href="">FAQs</a>
+                    <a class="text-body mr-3 d-none" id="adminTab" href="admin.html">Admin</a>
                 </div>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
