--- a/admin.html
+++ b/admin.html
@@ -112,32 +112,45 @@
     };
 
     // ================ PRODUCT LIST ================
-    function renderProducts(products) {
-      const tbody = document.querySelector('#productTable tbody');
-      if (!Array.isArray(products) || !products.length) {
-        tbody.innerHTML = '<tr><td colspan="7">ไม่พบข้อมูลสินค้า</td></tr>';
-        return;
-      }
-      tbody.innerHTML = '';
-      products.forEach(p => {
-        const priceList = (p.prices || []).map(pr => `<span>${pr.value} : ${pr.salePrice}฿</span>`).join("");
-        const desc = p.description ? (p.description.length > 80 ? p.description.substring(0,80) + '...' : p.description) : '';
-        const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td>${p.id || '-'}</td>
-          <td>${p.name || '-'}</td>
-          <td>${p.category || '-'}</td>
-          <td class="desc">${desc}</td>
-          <td class="prices">${priceList || '-'}</td>
-          <td>${p.image ? `<img src="${p.image}" alt="${p.name}" style="max-width:70px;">` : '-'}</td>
-          <td>
-            <button class="action-btn edit-btn" onclick="openEditModal('${p.id}')">แก้ไข</button>
-            <button class="action-btn delete-btn" onclick="deleteProduct('${p.id}')">ลบ</button>
-          </td>
-        `;
-        tbody.appendChild(tr);
-      });
-    }
+  function renderProducts(products) {
+  const tbody = document.querySelector('#productTable tbody');
+
+  if (!Array.isArray(products) || !products.length) {
+    tbody.innerHTML = '<tr><td colspan="7">ไม่พบข้อมูลสินค้า</td></tr>';
+    return;
+  }
+
+  tbody.innerHTML = '';
+  
+  products.forEach(p => {
+    const priceList = (p.prices || [])
+      .map(pr => `<span>${pr.value} : ${pr.salePrice}฿</span>`)
+      .join("");
+
+    const desc = p.description ? 
+      (p.description.length > 80 ? p.description.substring(0, 80) + '...' : p.description) 
+      : '';
+
+    // ใช้ path จาก p.image ตรง ๆ เลย
+    const imagePath = p.image ? `http://localhost:5000/${p.image}` : 'img/default.png';
+   console.log(imagePath,p.image)
+    const tr = document.createElement('tr');
+    tr.innerHTML = `
+      <td>${p.id || '-'}</td>
+      <td>${p.name || '-'}</td>
+      <td>${p.category || '-'}</td>
+      <td class="desc">${desc}</td>
+      <td class="prices">${priceList || '-'}</td>
+      <td><img src="${imagePath}" alt="${p.name}" style="max-width:70px;"></td>
+      <td>
+        <button class="action-btn edit-btn" onclick="openEditModal('${p.id}')">แก้ไข</button>
+        <button class="action-btn delete-btn" onclick="deleteProduct('${p.id}')">ลบ</button>
+      </td>
+    `;
+
+    tbody.appendChild(tr);
+  });
+}
 
     function fetchProducts() {
       fetch('http://localhost:5000/api/products')
